--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="hover-scale cursor-pointer" onclick="showPage('portfolio')">
-                        <img src="https://via.placeholder.com/400x300/667eea/ffffff?text=Wedding+Photography" alt="Wedding Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        <img src="photos/wed 1.jpg" alt="Wedding Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
                         <h3 class="text-xl font-semibold mt-4 text-gray-800">Wedding Photography</h3>
                         <p class="text-gray-600">Capturing your special day with elegance and emotion</p>
                     </div>
                     <div class="hover-scale cursor-pointer" onclick="showPage('portfolio')">
-                        <img src="https://via.placeholder.com/400x300/764ba2/ffffff?text=Portrait+Sessions" alt="Portrait Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        <img src="photos/pot 1.jpg" alt="Portrait Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
                         <h3 class="text-xl font-semibold mt-4 text-gray-800">Portrait Sessions</h3>
                         <p class="text-gray-600">Professional headshots and personal portraits</p>
                     </div>
                     <div class="hover-scale cursor-pointer" onclick="showPage('portfolio')">
-                        <img src="https://via.placeholder.com/400x300/667eea/ffffff?text=Event+Photography" alt="Event Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        <img src="photos/event 1.jpg" alt="Event Photography" class="w-full h-64 object-cover rounded-lg shadow-lg">
                         <h3 class="text-xl font-semibold mt-4 text-gray-800">Event Photography</h3>
                         <p class="text-gray-600">Corporate events and special celebrations</p>
                     </div>
@@ -143,22 +143,22 @@
                 <!-- Portfolio Grid -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="portfolio-item wedding hover-scale">
-                        <img src="https://via.placeholder.com/400x500/667eea/ffffff?text=Wedding+1" alt="Wedding Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/wed 1.jpg" alt="Wedding Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                     <div class="portfolio-item portrait hover-scale">
-                        <img src="https://via.placeholder.com/400x500/764ba2/ffffff?text=Portrait+1" alt="Portrait Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/pot 1.jpg" alt="Portrait Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                     <div class="portfolio-item event hover-scale">
-                        <img src="https://via.placeholder.com/400x500/667eea/ffffff?text=Event+1" alt="Event Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/event 1.jpg" alt="Event Photo 1" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                     <div class="portfolio-item wedding hover-scale">
-                        <img src="https://via.placeholder.com/400x500/764ba2/ffffff?text=Wedding+2" alt="Wedding Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/wed 2.jpg" alt="Wedding Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                     <div class="portfolio-item portrait hover-scale">
-                        <img src="https://via.placeholder.com/400x500/667eea/ffffff?text=Portrait+2" alt="Portrait Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/pot 2.jpg" alt="Portrait Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                     <div class="portfolio-item event hover-scale">
-                        <img src="https://via.placeholder.com/400x500/764ba2/ffffff?text=Event+2" alt="Event Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
+                        <img src="photos/event 2.jpg" alt="Event Photo 2" class="w-full h-80 object-cover rounded-lg shadow-lg">
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="https://via.placeholder.com/600x700/667eea/ffffff?text=Alex+Morgan+Portrait" alt="Alex Morgan - Photographer" class="w-full rounded-lg shadow-xl">
+                        <img src="photos/photo.jpg" alt="Alex Morgan - Photographer" class="w-full rounded-lg shadow-xl">
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Wedding Photography -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale">
-                        <img src="https://via.placeholder.com/400x250/667eea/ffffff?text=Wedding+Service" alt="Wedding Photography Service" class="w-full h-48 object-cover">
+                        <img src="photos/wed 1.jpg" alt="Wedding Photography Service" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-2xl font-bold text-gray-800 mb-4">Wedding Photography</h3>
                             <p class="text-gray-600 mb-4">Complete wedding day coverage including engagement sessions, ceremony, and reception photography.</p>
@@ -233,7 +233,7 @@
 
                     <!-- Portrait Photography -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale">
-                        <img src="https://via.placeholder.com/400x250/764ba2/ffffff?text=Portrait+Service" alt="Portrait Photography Service" class="w-full h-48 object-cover">
+                        <img src="photos/pot 1.jpg" alt="Portrait Photography Service" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-2xl font-bold text-gray-800 mb-4">Portrait Sessions</h3>
                             <p class="text-gray-600 mb-4">Professional headshots, family portraits, and personal branding photography sessions.</p>
@@ -249,10 +249,10 @@
 
                     <!-- Event Photography -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale">
-                        <img src="https://via.placeholder.com/400x250/667eea/ffffff?text=Event+Service" alt="Event Photography Service" class="w-full h-48 object-cover">
+                        <img src="photos/event 1.jpg" alt="Event Photography Service" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-2xl font-bold text-gray-800 mb-4">Event Photography</h3>
-                            <p class="text-gray-600 mb-4">Corporate events, parties, and special celebrations captured with professional quality.</p>
+                            <p class="text-gray-600 mb-4">Party celebrations captured with professional quality.</p>
                             <ul class="text-gray-600 mb-6 space-y-2">
                                 <li>• 4-6 hours coverage</li>
                                 <li>• 200+ edited photos</li>
